--- a/dashboard/history-send-detail.html
+++ b/dashboard/history-send-detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>전송내역 - 문자빨리</title>
+    <title>상세 - 전송내역 - 문자빨리</title>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- swiper -->
@@ -77,98 +77,129 @@
             </aside>
 
             <section class="historyPage">
-                <div class="sendPage">
+                <div class="send-detailPage">
                     <h2>전송내역</h2>
-                    <ol class="subTextBox">
-                        <li>1. 최근 90일 동안 전송된 메시지를 확인할 수 있습니다.</li>
-                        <li>2. 전송결과 완료 후 메시지 실패 건은 다시 재충전 됩니다.</li>
-                        <li>3. 문자메시지 (SMS/LMS/MMS)는 최대 72시간, 카카오톡 메시지는 최대 24시간까지 ‘진행중’표시가 나타날 수 있습니다.</li>
-                    </ol>
-                    <div class="seachBox">
-                        <div>
-                            <input type="text" readonly value="2023.02.01">
-                        </div>
-                        <span>~</span>
-                        <div>
-                            <input type="text" readonly value="2023.02.01">
-                        </div>
-                        <div>
-                            <div class="selectBox">
-                                메시지 타입
+                    <div>
+                        <div class="infoArea">
+                            <div>
+                                <b>전송일자</b>
+                                <time>
+                                    2023.02.20
+                                    15:26
+                                </time>
                             </div>
+                            <ul>
+                                <li>
+                                    <b>전송</b>
+                                    <p>99,999,999건</p>
+                                </li>
+                                <li>
+                                    <b>성공</b>
+                                    <p>99,999,999건</p>
+                                </li>
+                                <li>
+                                    <b>실패</b>
+                                    <p>99,999,999건</p>
+                                </li>
+                                <li>
+                                    <b>대기</b>
+                                    <p>99,999,999건</p>
+                                </li>
+                            </ul>
                         </div>
-                        <div>
-                            <input type="text" placeholder="제목 또는 내용 입력">
+                        <ul class="boardBox">
+                            <li>
+                                <b>No</b>
+                                <b>수신자번호</b>
+                                <b>이름</b>
+                                <b>결과</b>
+                                <b>비고</b>
+                            </li>
+                            <li>
+                                <p>1</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>2</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>실패</p>
+                                <p>수신거부</p>
+                            </li>
+                            <li>
+                                <p>3</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>4</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>실패</p>
+                                <p>수신거부</p>
+                            </li>
+                            <li>
+                                <p>5</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>6</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>7</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>8</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>9</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>10</p>
+                                <p>01012345678</p>
+                                <p>홍길동</p>
+                                <p>성공</p>
+                                <p></p>
+                            </li>
+                        </ul>
+                        <div class="pagerBox">
+                            <a href="">첫 리스트</a>
+                            <a href="">이전</a>
+                            <ol>
+                                <li class="active"><a href="">1</a></li>
+                                <li><a href="">2</a></li>
+                                <li><a href="">3</a></li>
+                                <li><a href="">4</a></li>
+                                <li><a href="">5</a></li>
+                            </ol>
+                            <a href="">다음</a>
+                            <a href="">마지막 리스트</a>
                         </div>
-                        <button class="imgBox">검색</button>
                     </div>
-                    <ul class="boardBox">
-                        <li>
-                            <b>전송일자</b>
-                            <b>제목</b>
-                            <b>구분</b>
-                            <b>전송건수</b>
-                            <b>성공</b>
-                            <b>실패</b>
-                            <b>대기</b>
-                            <b>전송결과</b>
-                        </li>
-                        <li>
-                            <a href="" data-result="완료">
-                                <time>2022.01.12 16:53</time>
-                                <p>1234</p>
-                                <p>단문 (SMS)</p>
-                                <p>9,856,751</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                                <p>0</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" data-result="완료">
-                                <time>2022.01.12 16:53</time>
-                                <p>테스트테스트테스트</p>
-                                <p>장문 (LMS)</p>
-                                <p>9,856,751</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                                <p>0</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" data-result="실패">
-                                <time>2022.01.12 16:53</time>
-                                <p>첫시작</p>
-                                <p>멀티 (LMS)</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" data-result="진행중">
-                                <time>2022.01.12 16:53</time>
-                                <p>안녕하세요</p>
-                                <p>단문 (SMS)</p>
-                                <p>9,856,751</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                                <p>900,000</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" data-result="실패">
-                                <time>2022.01.12 16:53</time>
-                                <p>감사합니다</p>
-                                <p>멀티 (LMS)</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                                <p>9,856,751</p>
-                                <p>0</p>
-                            </a>
-                        </li>
-                    </ul>
                 </div>
                 <footer>
                     <div>
