서치 박스 네임 변경 및 마진값 조정

--- a/dashboard/history-charge.html
+++ b/dashboard/history-charge.html
@@ -85,7 +85,7 @@
                         <li>3. ‘미입금’ 건은 결제일시로부터 7일 후 자동 취소 됩니다.</li>
                         <li>4. 결과에 오류가 있을 경우 고객센터로 문의 주시기 바랍니다.</li>
                     </ol>
-                    <div class="seachBox">
+                    <div class="searchBox">
                         <button class="active">오늘</button>
                         <button>1주일</button>
                         <button>1개월</button>
