--- a/dashboard/history-send.html
+++ b/dashboard/history-send.html
@@ -84,7 +84,7 @@
                         <li>2. 전송결과 완료 후 메시지 실패 건은 다시 재충전 됩니다.</li>
                         <li>3. 문자메시지 (SMS/LMS/MMS)는 최대 72시간, 카카오톡 메시지는 최대 24시간까지 ‘진행중’표시가 나타날 수 있습니다.</li>
                     </ol>
-                    <div class="seachBox">
+                    <div class="searchBox">
                         <div>
                             <input type="text" readonly value="2023.02.01">
                         </div>
