--- a/dashboard/history-use.html
+++ b/dashboard/history-use.html
@@ -80,7 +80,7 @@
                 <div class="usePage">
                     <h2>충전내역</h2>
                     <small class="subTextBox">최근 5년 사용내역을 확인할 수 있습니다.</small>
-                    <div class="seachBox">
+                    <div class="searchBox">
                         <button class="active">오늘</button>
                         <button>1주일</button>
                         <button>1개월</button>
