메인 페이지 핸드폰 모양 부분 완료

--- a/dashboard/history-reservation.html
+++ b/dashboard/history-reservation.html
@@ -84,7 +84,7 @@
                         <li>2. 삭제된 메시지는 복구가 불가합니다.</li>
                         <li>3. 최근 3개월의 예약된 메시지를 확인 가능합니다.</li>
                     </ol>
-                    <div class="seachBox">
+                    <div class="searchBox">
                         <div>
                             <input type="text" readonly value="2023.02.01">
                         </div>
