링크 연결 완료

--- a/dashboard/my-password.html
+++ b/dashboard/my-password.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그아웃</a>
+                <a href="../index.html">로그아웃</a>
             </div>
         </header>
 
@@ -38,7 +38,7 @@
                         일반회원
                         <strong>Frog256</strong>
                     </p>
-                    <a href="">마이페이지</a>
+                    <a href="my-profile.html">마이페이지</a>
                     <dl>
                         <dt>충전된 캐시</dt>
                         <dd>10,000,000</dd>
@@ -49,21 +49,21 @@
                     </dl>
                     <ul>
                         <li>
-                            <a href="">문자보내기</a>
+                            <a href="message.html">문자보내기</a>
                         </li>
                         <li>
                             <a href="">캐시충전</a>
                             <ul>
-                                <li><a href="">충전하기</a></li>
-                                <li><a href="">충전내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="charge.html">충전하기</a></li>
+                                <li><a href="history-charge.html">충전내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">발송내역</a>
                             <ul>
-                                <li><a href="">전송내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="history-send.html">전송내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
@@ -80,10 +80,10 @@
                 <div>
                     <h2>마이페이지</h2>
                     <ul>
-                        <li class="active"><a href="">회원정보변경</a></li>
-                        <li><a href="">비밀번호변경</a></li>
-                        <li><a href="">기업회원전환</a></li>
-                        <li><a href="">회원탈퇴</a></li>
+                        <li><a href="my-profile.html">회원정보변경</a></li>
+                        <li class="active"><a href="my-password.html">비밀번호변경</a></li>
+                        <li><a href="my-enter.html">기업회원전환</a></li>
+                        <li><a href="my-password.html">회원탈퇴</a></li>
                     </ul>
                     <div class="width400">
                         <strong>비밀번호 변경</strong>
