--- a/signIn.html
+++ b/signIn.html
@@ -37,7 +37,7 @@
                 문자빨리에 오신 것을 환영합니다.
             </p>
             <div class="width400">
-                <form>
+                <form action="dashboard/index.html">
                     <fieldset class="width400">
                         <ul class="inputBox">
                             <li>
