--- a/dashboard/charge-fail.html
+++ b/dashboard/charge-fail.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그아웃</a>
+                <a href="../index.html">로그아웃</a>
             </div>
         </header>
 
@@ -38,7 +38,7 @@
                         일반회원
                         <strong>Frog256</strong>
                     </p>
-                    <a href="">마이페이지</a>
+                    <a href="my-profile.html">마이페이지</a>
                     <dl>
                         <dt>충전된 캐시</dt>
                         <dd>10,000,000</dd>
@@ -48,22 +48,22 @@
                         <dd>1,000</dd>
                     </dl>
                     <ul>
-                        <li class="active">
-                            <a href="">문자보내기</a>
+                        <li>
+                            <a href="message.html">문자보내기</a>
                         </li>
                         <li>
                             <a href="">캐시충전</a>
                             <ul>
-                                <li><a href="">충전하기</a></li>
-                                <li><a href="">충전내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="charge.html">충전하기</a></li>
+                                <li><a href="history-charge.html">충전내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">발송내역</a>
                             <ul>
-                                <li><a href="">전송내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="history-send.html">전송내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
@@ -82,7 +82,7 @@
                     <img src="images/charge-fail.png" alt="충전하기 실패 이미지">
                     <strong>결제에 실패했습니다.</strong>
                     <p>잠시후에 다시 시도하세요.</p>
-                    <a href="" class="btn-color">돌아가기</a>
+                    <a href="charge.html" class="btn-color">돌아가기</a>
                 </div>
                 <footer>
                     <div>
