--- a/dashboard/charge-fin.html
+++ b/dashboard/charge-fin.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그아웃</a>
+                <a href="../index.html">로그아웃</a>
             </div>
         </header>
 
@@ -38,7 +38,7 @@
                         일반회원
                         <strong>Frog256</strong>
                     </p>
-                    <a href="">마이페이지</a>
+                    <a href="my-profile.html">마이페이지</a>
                     <dl>
                         <dt>충전된 캐시</dt>
                         <dd>10,000,000</dd>
@@ -48,22 +48,22 @@
                         <dd>1,000</dd>
                     </dl>
                     <ul>
-                        <li class="active">
-                            <a href="">문자보내기</a>
+                        <li>
+                            <a href="message.html">문자보내기</a>
                         </li>
                         <li>
                             <a href="">캐시충전</a>
                             <ul>
-                                <li><a href="">충전하기</a></li>
-                                <li><a href="">충전내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="charge.html">충전하기</a></li>
+                                <li><a href="history-charge.html">충전내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">발송내역</a>
                             <ul>
-                                <li><a href="">전송내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="history-send.html">전송내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
@@ -82,7 +82,7 @@
                     <img src="images/charge-fin.png" alt="충전하기 완료 이미지">
                     <strong>충전 되었습니다.</strong>
                     <p>충전된 캐시 내역은 [충전내역]에서 확인 하실 수 있습니다.</p>
-                    <a href="" class="btn-color">충전내역 확인</a>
+                    <a href="charge-fail.html" class="btn-color">충전내역 확인</a>
                 </div>
                 <footer>
                     <div>
