--- a/dashboard/history-send.html
+++ b/dashboard/history-send.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그아웃</a>
+                <a href="../index.html">로그아웃</a>
             </div>
         </header>
 
@@ -38,7 +38,7 @@
                         일반회원
                         <strong>Frog256</strong>
                     </p>
-                    <a href="">마이페이지</a>
+                    <a href="my-profile.html">마이페이지</a>
                     <dl>
                         <dt>충전된 캐시</dt>
                         <dd>10,000,000</dd>
@@ -48,22 +48,22 @@
                         <dd>1,000</dd>
                     </dl>
                     <ul>
-                        <li class="active">
-                            <a href="">문자보내기</a>
+                        <li>
+                            <a href="message.html">문자보내기</a>
                         </li>
                         <li>
                             <a href="">캐시충전</a>
                             <ul>
-                                <li><a href="">충전하기</a></li>
-                                <li><a href="">충전내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="charge.html">충전하기</a></li>
+                                <li><a href="history-charge.html">충전내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">발송내역</a>
                             <ul>
-                                <li><a href="">전송내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="history-send.html" class="active">전송내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
@@ -114,7 +114,7 @@
                             <b>전송결과</b>
                         </li>
                         <li>
-                            <a href="" data-result="완료">
+                            <a href="history-send-detail.html" data-result="완료">
                                 <time>2022.01.12 16:53</time>
                                 <p>1234</p>
                                 <p>단문 (SMS)</p>
@@ -125,7 +125,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" data-result="완료">
+                            <a href="history-send-detail.html" data-result="완료">
                                 <time>2022.01.12 16:53</time>
                                 <p>테스트테스트테스트</p>
                                 <p>장문 (LMS)</p>
@@ -136,7 +136,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" data-result="실패">
+                            <a href="history-send-detail.html" data-result="실패">
                                 <time>2022.01.12 16:53</time>
                                 <p>첫시작</p>
                                 <p>멀티 (LMS)</p>
@@ -147,7 +147,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" data-result="진행중">
+                            <a href="history-send-detail.html" data-result="진행중">
                                 <time>2022.01.12 16:53</time>
                                 <p>안녕하세요</p>
                                 <p>단문 (SMS)</p>
@@ -158,7 +158,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" data-result="실패">
+                            <a href="history-send-detail.html" data-result="실패">
                                 <time>2022.01.12 16:53</time>
                                 <p>감사합니다</p>
                                 <p>멀티 (LMS)</p>
