--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그아웃</a>
+                <a href="../index.html">로그아웃</a>
             </div>
         </header>
 
@@ -40,7 +40,7 @@
                         일반회원
                         <strong>Frog256</strong>
                     </p>
-                    <a href="">마이페이지</a>
+                    <a href="my-profile.html">마이페이지</a>
                     <dl>
                         <dt>충전된 캐시</dt>
                         <dd>10,000,000</dd>
@@ -51,21 +51,21 @@
                     </dl>
                     <ul>
                         <li>
-                            <a href="">문자보내기</a>
+                            <a href="message.html">문자보내기</a>
                         </li>
                         <li>
                             <a href="">캐시충전</a>
                             <ul>
-                                <li><a href="">충전하기</a></li>
-                                <li><a href="">충전내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="charge.html">충전하기</a></li>
+                                <li><a href="history-charge.html">충전내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="">발송내역</a>
                             <ul>
-                                <li><a href="">전송내역</a></li>
-                                <li><a href="">사용내역</a></li>
+                                <li><a href="history-send.html">전송내역</a></li>
+                                <li><a href="history-reservation.html">사용내역</a></li>
                             </ul>
                         </li>
                         <li>
